# xad

./: .clang-format  .gitignore  .lgtm.yml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  XAD.natvis  brahim  ll  mkdocs.yml  requirements.txt
.github/: SECURITY.md  boring-cyborg.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark-comparison.yml  benchmark-libor-baseline.yml  benchmark-libor-forge.yml  benchmark-libor.yml  benchmark-results.yml  benchmark-runner.yml  benchmark.yml  benchmarkresults.yml  benchmarks-jit-on-off.yml  benchmarks-pr-compare.yml  benchmarks.yml  build.yml  ci-jit-off.yml  ci-jit.yml  ci.yml  codeql-analysis.yml  documentation.yml  testresults.yml  wheels.yml
benchmarks/: CMakeLists.txt  util.hpp
benchmarks/Hessian/: CMakeLists.txt  hessian.hpp  main.cpp
benchmarks/Jacobian/: CMakeLists.txt  jacobian.hpp  main.cpp
benchmarks/Math/: CMakeLists.txt  main.cpp  math.hpp
benchmarks/MonteCarlo/: CMakeLists.txt  main.cpp  vasicek.hpp
bindings/python/: .gitignore  CMakeLists.txt  README.md  build.py  pyproject.toml
bindings/python/samples/: CMakeLists.txt  adj_1st.py  fwd_1st.py  swap_pricer.py
bindings/python/src/: CMakeLists.txt  exceptions.hpp  math.hpp  module.cpp  real.hpp  tape.hpp
bindings/python/tests/: CMakeLists.txt  test_exceptions.py  test_math_functions_derivatives.py  test_real_operations.py  test_tape.py
bindings/python/xad_autodiff/: __init__.py
bindings/python/xad_autodiff/adj_1st/: __init__.py
bindings/python/xad_autodiff/exceptions/: __init__.py
bindings/python/xad_autodiff/fwd_1st/: __init__.py
bindings/python/xad_autodiff/math/: __init__.py
cmake/: Config.cmake.in  SetupCompiler.cmake  SetupDocumentation.cmake  SetupOptions.cmake  SetupPython.cmake  SetupTesting.cmake  SetupVersion.cmake  SphinxPostProcess.cmake  XADConfig.cmake.in  XADSetupCompiler.cmake  XADSetupOptions.cmake  XADSetupTesting.cmake  XADSetupVersion.cmake
doc/: CMakeLists.txt  aad.rst  basic.rst  checkpointing.rst  conf.py.in  external_functions.rst  higher_order.rst  index.rst  intro.rst  license.rst  reference.rst  smoothed_math.rst
doc/_static/: style.css
doc/_templates/: layout.html
doc/plots/: sabs.m  sabs_plot.m  smax.m  smax_plot.m  smin.m  sstep.m  sstep_plot.m
doc/ref/: areal.rst  chkpt_cb.rst  complex.rst  exceptions.rst  expression.rst  freal.rst  global.rst  headers.rst  interface.rst  math.rst  smooth-math.rst  tape.rst  version.rst
docs/: README.md  aad.md  about.md  custom.css  examples.md  faq.md  getting_started.md  home.css  installation.md  python.md  quantlib.md
docs/.overrides/: home.html  main.html
docs/.plots/: sabs.m  sabs_plot.m  smax.m  smax_plot.m  smin.m  sstep.m  sstep_plot.m
docs/examples/: quantlib.md  simple_examples.md  xad_examples.md
docs/favicon/: site.webmanifest
docs/installation/: cxx.md  platforms.md  python.md
docs/quantlib-risks/: cxx.md  practical-guide.md  (+1 more)
samples/: CMakeLists.txt
samples/Hessian/: CMakeLists.txt  main.cpp
samples/Jacobian/: CMakeLists.txt  main.cpp
samples/LiborSwaptionPricer/: CMakeLists.txt  LiborData.hpp  LiborFunctions.hpp  LiborFunctionsJIT.hpp  LiborPricers.cpp  LiborPricers.hpp  PlatformInfo.hpp  benchmark.cpp  main.cpp
samples/LiborSwaptionPricer/JIT/: CMakeLists.txt  LiborFunctionsJIT.hpp  LiborPricersJIT.cpp  LiborPricersJIT.hpp  main.cpp
samples/SwapPricer/: CMakeLists.txt  SwapPricer.hpp  main.cpp
samples/adj_1st/: CMakeLists.txt  main.cpp
samples/adjvec_1st/: CMakeLists.txt  main.cpp
samples/checkpointing/: CMakeLists.txt  main.cpp  sin_checkpoint.hpp
samples/common/: functions.hpp
samples/external_function/: CMakeLists.txt  external_sum_elements.hpp  main.cpp
samples/fwd_1st/: CMakeLists.txt  main.cpp
samples/fwd_adj_2nd/: CMakeLists.txt  main.cpp
samples/fwdvec_1st/: CMakeLists.txt  main.cpp
samples/jit_tutorial/: CMakeLists.txt  main.cpp
scripts/: benchmark.sh  compare_benchmark.sh  compare_benchmarks.sh  run_benchmark.sh  run_benchmarks.sh
src/: CMakeLists.txt  Tape.cpp
src/XAD/: ABool.hpp  ARealDirect.hpp  AlignedAllocator.hpp  BinaryDerivativeImpl.hpp  BinaryExpr.hpp  BinaryFunctors.hpp  BinaryMathFunctors.hpp  BinaryOperatorMacros.hpp  BinaryOperators.hpp  CheckpointCallback.hpp  ChunkContainer.hpp  Complex.hpp  Config.hpp.in  EigenCompatibility.hpp  Exceptions.hpp  Expression.hpp  FRealDirect.hpp  Hessian.hpp  Interface.hpp  JITBackendInterface.hpp  JITBackendStub.hpp  JITCompiler.hpp  JITCompilerTLS.cpp  JITExprTraits.hpp  JITGraph.hpp  JITGraphInterpreter.cpp  JITGraphInterpreter.hpp  JITOpCodeTraits.hpp  Jacobian.hpp  Literals.hpp  Literals.hpp.jit  Literals.hpp.jit2  Macros.hpp  MathFunctions.hpp  OperationsContainer.hpp  OperationsContainerPaired.hpp  RealDirect.hpp  ReusableRange.hpp  StdCompatibility.hpp  Tape.hpp  (+12 more)
src/XAD/tools/: Vector.hpp  compare.hpp  enable_if.hpp
src/XAD/tools/iterators/: iterator_traits.hpp  reverse_iterator.hpp  vector_Iterator.hpp
test/: ABool_test.cpp  ARealDirect_test.cpp  ARealPassive_test.cpp  CMakeLists.txt  COSHestonEngineExpr.hpp  Checkpointing_test.cpp  ChunkContainer_test.cpp  ComplexAD_test.cpp  Complex_test.cpp  DirectModeBenchmark.cpp  Eigen_test.cpp  Exceptions_test.cpp  ExpressionMath1_test.cpp  ExpressionMath2_test.cpp  ExpressionMath3_test.cpp  ExpressionMathJit_test.cpp  ExpressionMeta_test.cpp  ExpressionsConversion_test.cpp  Expressions_test.cpp  ExternalFunc_test.cpp  FRealDirect_test.cpp  FReal_test.cpp  Hessian_test.cpp  HigherOrder_test.cpp  JITABool_test.cpp  JITCompiler_test.cpp  JITExprTraits_test.cpp  JITExpressionMath_test.cpp  JITGraphInterpreter_test.cpp  JITGraph_test.cpp  JITTutorial_test.cpp  JIT_test.cpp  Jacobian_test.cpp  OperationsContainer_test.cpp  PartialRollback_test.cpp  ReusableRange_test.cpp  StdCompatibility_test.cpp  StreamOps_test.cpp  TapeContainer_test.cpp  TapeGapList_test.cpp  (+6 more)
test/compile_failures/: CMakeLists.txt  convert_to_double.cpp  ternary_operator_conversion.cpp
(+34 files in other folders)
